Fix overflow paragraph first product in home page

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -69,6 +69,9 @@
           width: 25rem;
         }
       }
+      @include m.respond(mobile-small) {
+        width: 100%;
+      }
       div p:last-child {
         margin-top: 2.4rem;
       }
